@@ -1,26 +1,0 @@
-C	methane
-COC	dimethyl ether
-OC(C)CC	2-butanol
-O[C@H](C)CC	R-2-butanol
-O[C@@H](C)CC	S-2-butanol
-O([CH3])[CH3]	DME
-FC=CF	difluoroethene
-F/C=C/F	trans-difluoroethene
-F/C=C\F	cis-difluoroethene
-C(N)N	diamino methane
-C(N)[NH3+]	protonated diamino methane
-CCO	ethanol
-CC[18O][2H]	ethanol-18OD
-C([2H])([2H])([2H])[2H]	deuteromethane
-#   babel dupset.smi -osmi --unique param
-#  param     Number of mols converted
-# nothing             13
-# /formula             5
-# /connect             6
-# /nostereo            9
-# /nosp3              11
-# /noEZ               11
-# /nochg              12
-# /noiso              11
-#cansmi               13
-#cansmiNS              7
